--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <ol>
     <li>Learning <strong>programming</strong></li>
     <li>Playing <strong>chess and fortnite</strong></li>
-    <li>Watching intresting crime thriller <a href="https://www.netflix.com/in/"><strong>web series</strong></a> </li>
+    <li>Watching interesting crime thriller <a href="https://www.netflix.com/in/"><strong>web series</strong></a> </li>
     <li>Learning <strong>web developement</strong> </li>
   </ol>
   <hr size="2" noshade>
