--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Abhiram's Personal site</title>
-    <link rel="stylesheet" href="css/styles.css">
-
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="10">
     <tr>
-      <td> <img src="circle-cropped.png" width="250" height="270" alt="Abhiram's Profie picture"> </td>
+      <td> <img src="F:\Web Developement\HTML-Personal site\circle-cropped.png" width="250" height="270" alt="Abhiram's Profie picture"> </td>
       <td>
         <h1>Abhiram Bhimavarapu</h1>
         <p><em>An <strong>Undergraduate ICT </strong>student</em></p>
@@ -21,7 +20,7 @@
     </tr>
 
   </table>
-  <hr size="2" noshade>
+  <hr>
   <h3>Education</h3>
 
   <ul>
@@ -46,7 +45,7 @@
       </tr>
     </table>
   </ul>
-  <hr size="2" noshade>
+  <hr>
   <h3>Skills</h3>
   <table cellspacing="10">
     <tr>
@@ -62,17 +61,26 @@
       <td>⭐⭐</td>
     </tr>
   </table>
-  <hr size="2" noshade>
+  <hr>
   <h3>Hobbies</h3>
-  <ol>
-    <li>Learning <strong>programming</strong></li>
-    <li>Playing <strong>chess and fortnite</strong></li>
-    <li>Watching interesting crime thriller <a href="https://www.netflix.com/in/"><strong>web series</strong></a> </li>
-    <li>Learning <strong>web developement</strong> </li>
-  </ol>
-  <hr size="2" noshade>
+  <div id="wrapper" class="b">
+    <div id="content" class="b">
+      <div id="listDiv" class="b">
+        <ol>
+
+          <li>Learning <strong>programming</strong></li>
+          <li>Playing <strong>chess and fortnite</strong></li>
+          <li>Learning <strong>web developement</strong> </li>
+          <li>Watching intresting crime thriller <a href="https://www.netflix.com/in/"><strong>web series</strong></a> </li>
+        </ol>
+      </div>
+    </div>
+  </div>
+  <hr>
   <h3>Contact details</h3>
-  You can Contact me <a href="contact.html">here</a>
+  <div class="center">
+    You can Contact me <a href="F:\Web Developement\HTML-Personal site\contact details.html">here</a>
+  </div>
 </body>
 
 </html>
