--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td> <img src="F:\Web Developement\HTML-Personal site\circle-cropped.png" width="250" height="270" alt="Abhiram's Profie picture"> </td>
+      <td> <img src="/circle-cropped.png" width="250" height="270" alt="Abhiram's Profie picture"> </td>
       <td>
         <h1>Abhiram Bhimavarapu</h1>
         <p><em>An <strong>Undergraduate ICT </strong>student</em></p>
