--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <hr>
   <h3>Contact details</h3>
   <div class="center">
-    You can Contact me <a href="F:\Web Developement\HTML-Personal site\contact details.html">here</a>
+    You can Contact me <a href="contact details.html">here</a>
   </div>
 </body>
 
